--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,9 +8,11 @@
     <link rel="stylesheet" href="styles.css" />
     <title>Acalendar</title>
   </head>
+
   <body>
-    <button class="btn-start">Create Calendar</button>
+    <button class="btn-start">Starte Kalender :-)</button>
     <div class="container">
-    <script src="main.js"></script>
+      <script src="main.js"></script>
   </body>
+
 </html>
