--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <button class="btn-start">Starte Kalender :-)</button>
+    <!-- <button class="btn-start">Starte Kalender :-)</button> -->
     <div class="container">
       <script src="main.js"></script>
   </body>
